# fsn

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  clangformat.sh  tidy.sh
src/: codegen.cppm  fsn.cppm  interface.cppm
src/fsn/: codegen.h  codegen.hpp  interface.h  interface.hpp  reflection_utils.hpp
tests/: CMakeLists.txt  main.cpp
tests/tests/: codegen.cpp  interface.cpp
